BusOne/src/objects/Veeva_Settings_vod__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ACCOUNT_HIERARCHY_PAGE_vod__c</fullName>
        <description>A comma delimited list of settings for special configuration of the Account Hierarchy Page. i.e.: a value of 1 turns on the Account Plans Overaly</description>
        <label>ACCOUNT_HIERARCHY_PAGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_LIST_COLS_vod__c</fullName>
        <defaultValue>&quot;ACCOUNT_LIST_COLS;;TABLET&quot;</defaultValue>
        <description>List of columns to display for an Account List in the VMobile Tablet application. Enter column names in the following format: Object_Name.API_Name</description>
        <inlineHelpText>List of columns to display for an Account List in the VMobile Tablet application.   Enter column names in the following format: Object_Name.API_Name.</inlineHelpText>
        <label>ACCOUNT_LIST_COLS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_MOBILE_SOQL_BB_vod__c</fullName>
        <defaultValue>&quot;ACCOUNT_MOBILE_SOQL;;Blackberry&quot;</defaultValue>
        <description>String used by application. ACCOUNT_MOBILE_SOQL_BB is a comma separated list containing the fields on account to include in the VOD BlackBerry mobile application.</description>
        <inlineHelpText>A comma separated list containing the Account fields to include in the VMobile BlackBerry application.</inlineHelpText>
        <label>ACCOUNT_MOBILE_SOQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_MOBILE_SOQL_vod__c</fullName>
        <defaultValue>&quot;ACCOUNT_MOBILE_SOQL;;MOBILE_SOQL&quot;</defaultValue>
        <description>String used by application. ACCOUNT_MOBILE_SOQL is a comma separated list containing the fields on account to include in the VOD mobile application.</description>
        <inlineHelpText>A comma separated list containing the Account fields to include in the VMobile applications.</inlineHelpText>
        <label>ACCOUNT_MOBILE_SOQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_RECORD_TYPE_ICON_MAP_vod__c</fullName>
        <defaultValue>&quot;ACCOUNT_RECORD_TYPE_ICON_MAP;;Common&quot;</defaultValue>
        <description>The value of this setting is a reference to a Veeva message that contains a delimited string of the format: 
&lt;ICON_NAME&gt;:&lt;CUSTOM_RECORD_TYPE&gt;,&lt;CUSTOM_RECORD_TYPE&gt;;&lt;ICON_NAME&gt;:&lt;CUSTOM_RECORD_TYPE&gt;,&lt;CUSTOM_RECORD_TYPE&gt; 

ICON_NAME is one of the standard icons we deliver (see Admin Guide) and CUSTOM_RECORD_TYPE is the name of the custom record type that is mapped to the icon. Multiple custom record types can be tied to the same icon by placing them in a comma delimited list. 

Multiple icon mappings are separated by a semicolon. 

Example: 

Professional_vod:MyCustom1,MyCustom2;Hospital_vod:MyCustom3</description>
        <label>ACCOUNT_RECORD_TYPE_ICON_MAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCT_PREVIEW_DURING_CREATION_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines if user can preview full account profile during new account creation process.</description>
        <inlineHelpText>This flag determines whether or not to display account preview page in new account creation process. Value 1 turns it ON.</inlineHelpText>
        <label>Account Preview during Creation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTIVITY_SYNC_PROCESS_LIFE_TIME_vod__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Controls the number of days before the activity sync process to be stop.</description>
        <inlineHelpText>Controls the number of days before the activity sync process to be stop.</inlineHelpText>
        <label>ACTIVITY_SYNC_PROCESS_LIFE_TIME</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADVANCED_ATTENDEE_MANAGEMENT_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advanced Attendee Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADVANCED_SEARCH_VOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns on the Advanced Search capability.</description>
        <inlineHelpText>Check this to enable Advanced Search.</inlineHelpText>
        <label>Advanced Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AFFILIATION_VOD_MOBILE_SOQL_vod__c</fullName>
        <defaultValue>&quot;AFFILIATION_VOD__C_MOBILE_SOQL;;Blackberry&quot;</defaultValue>
        <description>String used by application. AFFILIATION_VOD__C_MOBILE_SOQL is a comma separated list containing the fields on Affiliation_vod__c to include in the VOD mobile BlackBerry application.</description>
        <inlineHelpText>A comma separated list containing the Affiliation fields to include in the VMobile BlackBerry application.</inlineHelpText>
        <label>AFFILIATION_VOD__C_MOBILE_SOQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFFILIATION_VOD_WHERE_CLAUSE_vod__c</fullName>
        <defaultValue>&quot;AFFILIATION_VOD__C_WHERE_CLAUSE;;Blackberry&quot;</defaultValue>
        <description>BlackBerry Affiliation Where Clause</description>
        <inlineHelpText>Where clause used to filter the Affiliation records downloaded to the VMobile BlackBerry application.</inlineHelpText>
        <label>AFFILIATION_VOD__C_WHERE_CLAUSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALLOWED_CALL_RECORD_TYPES_vod__c</fullName>
        <defaultValue>&quot;ALLOWED_CALL_RECORD_TYPES;;Common&quot;</defaultValue>
        <description>References a Veeva message that contains the configuration for allowing only certain call record types for each account record type. The syntax for the Veeva message is: &lt;ACCOUNT_RECORD_TYPE1&gt;,&lt;CALL_RECORD_TYPE1&gt;,&lt;CALL_RECORD_TYPE2&gt;,...;;
            If there is no call record type provided, the call functionality will be removed for the account record type.</description>
        <label>Allowed Call RecordTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYTIC_ACCOUNT_CAP_vod__c</fullName>
        <defaultValue>50000</defaultValue>
        <description>Veeva Internal Use Only.</description>
        <inlineHelpText>The threshold value for the number of accounts for which VInsights Sales Data is synchronized to the VMobile Tablet application.</inlineHelpText>
        <label>ANALYTIC_ACCOUNT_CAP</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATL_LAST_UPDATE_TRACKING_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that enables tracking of changes to Account Shares  generated by Account Territory Loader tool. This is to allow territory changes on mobile platforms to be properly synchronized. When enabled, a special field on Account, ATL_Last_Update_Date_Time_vod__c, will be updated on all Accounts affected by the ATL process.</description>
        <inlineHelpText>Account Territory Loader activity tracking for mobile synchronization.</inlineHelpText>
        <label>ATL_LAST_UPDATE_TRACKING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATTEMPT_REFRESH_IF_OLDER_HOURS_vod__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Number of hours since the last Refresh when the user will be alerted to perform a Manual Refresh.</description>
        <inlineHelpText>Number of hours since the last Refresh when the user will be alerted to perform a Manual Refresh for the VMobile BlackBerry application.</inlineHelpText>
        <label>ATTEMPT_REFRESH_IF_OLDER_HOURS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATTEMPT_REFRESH_REMINDER_DELAY_vod__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Number of minutes to wait before sending the next Refresh reminder to a user if the current VMobile BlackBerry data needs to be refreshed.  The default value is 60 minutes.</description>
        <inlineHelpText>Number of minutes to wait before sending the next Refresh reminder to a user if the current VMobile BlackBerry data needs to be refreshed.  The default value is 60 minutes.</inlineHelpText>
        <label>ATTEMPT_REFRESH_REMINDER_DELAY</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUTO_ADD_UNASSIGNED_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the automatic creation of an unassigned call with the Exploria integration.</description>
        <inlineHelpText>Enables the automatic creation of an unassigned call with the Exploria integration.</inlineHelpText>
        <label>AUTO_ADD_UNASSIGNED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUTO_SYNC_vod__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Activates the Auto Send feature for submitted Calls and Medical Inquiry records in the VMobile Tablet application. This process also checks for an available internet connection.  The default value is 15 minutes.</description>
        <inlineHelpText>Activates the Auto Send feature for submitted Calls and Medical Inquiry records in the VMobile Tablet application. The default value is 15 minutes.</inlineHelpText>
        <label>AUTO_SYNC</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Object_Hierarchy_vod__c</fullName>
        <defaultValue>&quot;Plan_Tactic_vod__c.Account_Plan_vod__r,Account_Tactic_vod__c.Plan_Tactic_vod__r,Call_Objective_vod__c.Account_Tactic_vod__r&quot;</defaultValue>
        <description>Comma delimited list of object API names and relationship names used to determine the Account Plan progress object hierarchy. Each value should be the name of an object followed by the name of the relationship separated by a dot. The first object.relationship is considered the top of the hierarchy, the last at the bottom. Default hierarchy is: Plan_Tactic_vod__c.Account_Plan_vod__r, Account_Tactic_vod__c.Plan_Tactic_vod__r, Call_Objective_vod__c.Account_Tactic_vod__r</description>
        <label>Account Plan Object Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Sharing_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enables automatic sharing of Account Plan related data to Team Members. See documentation for more details.
            0 - Disabled (default value)
            1 - Enabled</description>
        <label>Account Plan Sharing</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_REGEX_vod__c</fullName>
        <defaultValue>&quot;ACCOUNT_REGEX;;Common&quot;</defaultValue>
        <description>Reference to the Veeva message that contains the fields and their regular expressions.</description>
        <label>Account_REGEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_vod_REGEX_vod__c</fullName>
        <defaultValue>&quot;ADDRESS_VOD_REGEX;;Common&quot;</defaultValue>
        <description>Reference to the Veeva message that contains the fields and their regular expressions.</description>
        <label>Address_vod_REGEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_Account_Link_URL_vod__c</fullName>
        <defaultValue>&quot;BB_Account_Link_URL;;Blackberry&quot;</defaultValue>
        <description>URL in VMobile BlackBerry application that links to more information about an Account online. The URL can be configured to point to any Visualforce page that can render in the BlackBerry browser.</description>
        <inlineHelpText>URL in VMobile BlackBerry application that links to more information about an Account online.</inlineHelpText>
        <label>BB_Account_Link_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_LINK_1_vod__c</fullName>
        <defaultValue>&quot;BB_LINK_1;;Blackberry&quot;</defaultValue>
        <description>URL that can be configured as a menu item in the VMobile BlackBerry application to go online. URL can point to any Visualforce page that can render in the BlackBerry browser. Refer to the VMobile BlackBerry Guide for instruction regarding the URL format.</description>
        <inlineHelpText>URL that can be configured as a menu item in the VMobile BlackBerry application to go online. The URL can point to any Visualforce page that can render in the BlackBerry browser.</inlineHelpText>
        <label>BB_LINK_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_LINK_2_vod__c</fullName>
        <defaultValue>&quot;BB_LINK_2;;Blackberry&quot;</defaultValue>
        <description>URL that can be configured as a menu item in the VMobile BlackBerry application to go online. URL can point to any Visualforce page that can render in the BlackBerry browser. Refer to the VMobile BlackBerry Guide for instruction regarding the URL format.</description>
        <inlineHelpText>URL that can be configured as a menu item in the VMobile BlackBerry application to go online. The URL can point to any Visualforce page that can render in the BlackBerry browser.</inlineHelpText>
        <label>BB_LINK_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_LINK_3_vod__c</fullName>
        <defaultValue>&quot;BB_LINK_3;;Blackberry&quot;</defaultValue>
        <description>URL that can be configured as a menu item in the VMobile BlackBerry application to go online. URL can point to any Visualforce page that can render in the BlackBerry browser. Refer to the VMobile BlackBerry Guide for instruction regarding the URL format.</description>
        <inlineHelpText>URL that can be configured as a menu item in the VMobile BlackBerry application to go online. The URL can point to any Visualforce page that can render in the BlackBerry browser.</inlineHelpText>
        <label>BB_LINK_3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BULK_CALL_OBJECTIVE_CREATION_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enables bulk call objective creation from the Plan_Tactic_View visual force page.</description>
        <inlineHelpText>Enables bulk call objective creation from the Plan_Tactic_View visual force page.</inlineHelpText>
        <label>Bulk Call Objective Creation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUSINESS_ACCOUNT_ATTENDEE_MODE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines if a user can add business accounts as event attendees. See documentation for more details.</description>
        <label>Business Account Attendee Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CACHE_TIMEOUT_vod__c</fullName>
        <defaultValue>960</defaultValue>
        <description>Time in minutes before an object stored in VOD cache is expired.</description>
        <inlineHelpText>Controls the timing of the cache rebuild for Veeva CRM application specific components.  Default value is 960 minutes (16 hours).</inlineHelpText>
        <label>CACHE_TIMEOUT</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_CYCLE_PLANS_ACTUAL_vod__c</fullName>
        <defaultValue>&quot;CALC_CYCLE_PLANS_ACTUAL;;CyclePlan&quot;</defaultValue>
        <description>Points to the Veeva Message to define the query of what calls should be used for calculation</description>
        <label>CALC_CYCLE_PLANS_ACTUAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_CYCLE_PLANS_REALTIME_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns on the real time calculation of cycle plans</description>
        <label>CALC_CYCLE_PLANS_REALTIME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CALC_CYCLE_PLANS_SCHEDULED_vod__c</fullName>
        <defaultValue>&quot;CALC_CYCLE_PLANS_SCHEDULED;;CyclePlan&quot;</defaultValue>
        <description>Points to the Veeva Message to define the query of what calls should be used for calculation</description>
        <label>CALC_CYCLE_PLANS_SCHEDULED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL2_BB_HISTORY_vod__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Determines the time frame for the download of Partial call headers for past Calls to the VMobile BlackBerry application.  The default value is 90 days.  For improved performance, the recommended value is 30 days.</description>
        <inlineHelpText>Determines the time frame for the download of Partial call headers for past Calls to the VMobile BlackBerry application.</inlineHelpText>
        <label>CALL2_BB_HISTORY</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALL2_HEADER_FIELDS_vod__c</fullName>
        <defaultValue>&quot;CALL2_HEADER_FIELDS;;Blackberry&quot;</defaultValue>
        <description>List of Call fields synced to the VMobile BlackBerry application.</description>
        <inlineHelpText>List of Call fields synced to the VMobile BlackBerry application.</inlineHelpText>
        <label>CALL2_HEADER_FIELDS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALLS_PER_DAY_MENU_vod__c</fullName>
        <defaultValue>&quot;CALLS_PER_DAY_MENU;;Blackberry&quot;</defaultValue>
        <description>Displays simple metrics for a rep using keywords like: %30DAY, %7DAY, %1DAY, %AVG and /n</description>
        <inlineHelpText>Displays simple metrics for a rep using keywords like: %30DAY, %7DAY, %1DAY, %AVG and /n</inlineHelpText>
        <label>CALLS_PER_DAY_MENU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_ARCHIVE_USER_vod__c</fullName>
        <description>Contains a valid SFDC Username that is permitted to archive locked calls.</description>
        <label>CALL_ARCHIVE_USER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_BACKDATE_LIMIT_vod__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>Represents the number of days in the past that a user cannot save a call before. Example: If the value is 30, then a user cannot save a call where the date is more than 30 days in the past.</description>
        <label>Call Backdate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALL_CHILD_WHERE_vod__c</fullName>
        <defaultValue>&quot;CALL_CHILD_WHERE;;MOBILE_SOQL&quot;</defaultValue>
        <description>This setting is no longer used by the application.</description>
        <inlineHelpText>This setting is no longer used by the application.</inlineHelpText>
        <label>CALL_CHILD_WHERE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_FUTURE_IN_DAYS_vod__c</fullName>
        <defaultValue>90</defaultValue>
        <label>CALL_FUTURE_IN_DAYS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALL_HEADER_WHERE_BB_vod__c</fullName>
        <defaultValue>&quot;CALL_HEADER_WHERE;;Blackberry&quot;</defaultValue>
        <description>String used by application. Contains the SOQL where clause to filter the number of calls downloaded to the mobile application.</description>
        <inlineHelpText>Where clause used to filter the Call records downloaded to the VMobile BlackBerry application.</inlineHelpText>
        <label>CALL_HEADER_WHERE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_HEADER_WHERE_vod__c</fullName>
        <defaultValue>&quot;CALL_HEADER_WHERE;;MOBILE_SOQL&quot;</defaultValue>
        <description>String used by application. Contains the SOQL where clause to filter the number of calls downloaded to the mobile application.</description>
        <label>CALL_HEADER_WHERE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_HISTORY_IN_DAYS_vod__c</fullName>
        <defaultValue>90</defaultValue>
        <description>Historical number of days of call history that will be synced.</description>
        <inlineHelpText>Historical number of days of call history that will be synced.</inlineHelpText>
        <label>CALL_HISTORY_IN_DAYS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALL_OBJECTIVES_ALERT_THRESHOLD_DAYS_vod__c</fullName>
        <defaultValue>14</defaultValue>
        <description>This value determines the number of days before a Call Objective&apos;s due date to display an alert to the user. For example, if this value is 14, alerts will be displayed for Call Objectives beginning two weeks before the objectives are due. The value of the To_Date_vod field is used to determine the due date.

NOTES:

    In order for the alert to display, the current date must be greater than or equal to both the alert threshold date and the From_Date_vod value for the Call Objective.
    If this value is 0, the alert will display on the day the objective is due.
    If this value is blank or negative, no alerts will show.</description>
        <inlineHelpText>This value determines the number of days before a Call Objective due date to display an alert to the user. For example, if this value is 14, alerts will be displayed for Call Objectives beginning two weeks before the objectives are due.</inlineHelpText>
        <label>CALL_OBJECTIVES_ALERT_THRESHOLD_DAYS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALL_SUBMISSION_MONTHLY_WINDOW_vod__c</fullName>
        <defaultValue>&quot;CALL_SUBMISSION_MONTHLY_WINDOW;;CallReport&quot;</defaultValue>
        <description>This Veeva Setting limits the ability to submit calls from the prior month past a date in the following month. Define a list of dates where calls cannot be submitted past for the prior month.

- CALL_SUBMISSION_MONTHLY_WINDOW =  &lt;MONTH_NUMBER&gt;,&lt;NUMBER OF DAYS OF WINDOW&gt;;&lt;MONTH NUMBER&gt;, &lt;NUMBER OF DAYS OF WINDOW&gt;;

- Where &lt;NUMBER OF DAYS OF WINDOW&gt; determines the number of days of the defined &lt;MONTH NUMBER&gt; that you allow calls to be submitted for the previous month  (&lt;MONTH NUMBER&gt; - 1 unless January, then it would be 12)</description>
        <label>Call Submission Monthly Window</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPPED_CALL_HISTORY_IN_DAYS_vod__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Number of days of call history to sync for user over the account cap.</description>
        <inlineHelpText>Number of days of call history to sync for user over the account cap.</inlineHelpText>
        <label>CAPPED_CALL_HISTORY_IN_DAYS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_ENABLE_AUTO_LAUNCH_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, presentations launch directly from the presentation viewer and start on the first slide</description>
        <label>CLM Enable Auto Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_EXIT_CONFIRMATION_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show a modal allowing user to select an account before exiting a CLM presentation.</description>
        <label>CLM Exit Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_HIGHLIGHTER_PEN_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables the highlighter pen in CLM.</description>
        <label>CLM Highlighter Pen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_NAV_BAR_HIDE_CONTENT_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, when a CLM user displays the navigation bar at the bottom of the iPad’s screen, the top part of the screen will fade out to black to hide the content.</description>
        <label>CLM_NAV_BAR_HIDE_CONTENT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_PRESENTATION_GROUPING_vod__c</fullName>
        <defaultValue>&quot;CLM_PRESENTATION_GROUPING;;CLM&quot;</defaultValue>
        <description>Comma delimited list of Field API names on CLM_Presentation_vod__c which defines possible groupings of CLM presentations</description>
        <label>CLM Presentation Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_SELECT_ACCOUNT_PREVIEW_MODE_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables ability to create a call after selecting an account while previewing media in the Media Player.</description>
        <label>CLM_Select_Account_Preview_Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_VIDEO_AUTOPLAY_VOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, video key messages will begin playing as soon as the user swipes to the key message. When unchecked, users will have to tap the screen to begin the video.</description>
        <inlineHelpText>This does not apply to videos embedded in HTML5 content.</inlineHelpText>
        <label>CLM_VIDEO_AUTOPLAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMPANY_FIELDS_FOR_PRINT_vod__c</fullName>
        <defaultValue>&quot;COMPANY_FIELDS_FOR_PRINT;;ORDER_MANAGEMENT&quot;</defaultValue>
        <description>Contains the HTML that designates the company information displayed on a printed order.</description>
        <inlineHelpText>Contains the HTML that designates the company information displayed on a printed order.</inlineHelpText>
        <label>COMPANY_FIELDS_FOR_PRINT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTENT_ACKNOWLEDGEMENT_TEMPLATE_vod__c</fullName>
        <defaultValue>&quot;CONTENT_ACKNOWLEDGEMENT_TEMPLATE;;AOC&quot;</defaultValue>
        <description>The format of the generated Content Acknowledgment receipt can be configured by modifying the HTML text contained within this setting.</description>
        <label>Content Acknowledgement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTENT_ALERT_MSG_NUM_DAYS_vod__c</fullName>
        <defaultValue>15</defaultValue>
        <description>The duration in days for which the alert for new content is displayed to the users.</description>
        <label>Content Alert Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONTRACT_DISCLAIMER_vod__c</fullName>
        <defaultValue>&quot;DISCLAIMER;;CONTRACTS&quot;</defaultValue>
        <description>This setting points to a Veeva Message that determines the default disclaimer text to display on contracts. The correct format for this setting is MESSAGENAME;;CATEGORY for the Veeva Message to be used.</description>
        <inlineHelpText>This setting points to a Veeva Message that determines the default disclaimer text to display on contracts. The correct format for this setting is MESSAGENAME;;CATEGORY for the Veeva Message to be used.</inlineHelpText>
        <label>Contract Disclaimer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYCLE_PLAN_NO_DATA_DISPLAY_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, a message will display to the user when no cycle plan data exists. The message is configured through the CYCLE_PLAN_NO_DATA_MESSAGE Veeva message.  Default value is checked.</description>
        <inlineHelpText>Enables the display of a message to the user in the Account Cycle Plan when no cycle plan data exists for the account.  Default value is checked.</inlineHelpText>
        <label>CYCLE_PLAN_NO_DATA_DISPLAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CYCLE_PLAN_TAB_COLS_vod__c</fullName>
        <defaultValue>&quot;CYCLE_PLAN_TAB_COLS;;TABLET&quot;</defaultValue>
        <description>List of column headers for the cycle plan tab. Only fields from the Cycle_Plan_vod object can be added to this list.</description>
        <inlineHelpText>List of columns to display in Cycle Plan Targets in the VMobile Tablet application.</inlineHelpText>
        <label>CYCLE_PLAN_TAB_COLS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYCLE_PLAN_TARGET_VOD_C_WHERE_CLAUSE_vod__c</fullName>
        <defaultValue>&quot;CYCLE_PLAN_TARGET_VOD__C_WHERE_CLAUSE;;Blackberry&quot;</defaultValue>
        <description>Where clause to filter the Cycle Plan Target records downloaded to the VMobile BlackBerry application.  WHERE ( Cycle_Plan_vod__r.Territory_vod__c in (@@VOD_MY_TERRITORY@@) OR Cycle_Plan_vod__r.OwnerId = @@VOD_SF_USER_ID@@).</description>
        <inlineHelpText>Where used clause to filter the Cycle Plan Target records downloaded to the VMobile BlackBerry application.</inlineHelpText>
        <label>CYCLE_PLAN_TARGET_VOD__C_WHERE_CLAUSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYCLE_PLAN_THRESHOLD_vod__c</fullName>
        <defaultValue>&quot;CYCLE_PLAN_THRESHOLD;;TABLET&quot;</defaultValue>
        <description>Threshold value that determines the color of the Cycle Plan gauge and the Actual call count graphics on the VMobile Tablet Home Page.  The threshold value format is two integers separated by a comma (xx,yy).</description>
        <inlineHelpText>Threshold value that determines the color of the Cycle Plan gauge and the Actual call count graphics on the VMobile Tablet Home Page.</inlineHelpText>
        <label>CYCLE_PLAN_THRESHOLD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CYCLE_PLAN_VOD_C_WHERE_CLAUSE_vod__c</fullName>
        <defaultValue>&quot;CYCLE_PLAN_VOD__C_WHERE_CLAUSE;;Blackberry&quot;</defaultValue>
        <description>Where clause to filter the Cycle Plan records downloaded to the VMobile BlackBerry application.  Default value is WHERE Territory_vod__c in (@@VOD_MY_TERRITORY@@).</description>
        <inlineHelpText>Where clause to filter the Cycle Plan records downloaded to the VMobile BlackBerry application.</inlineHelpText>
        <label>CYCLE_PLAN_VOD__C_WHERE_CLAUSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_ScheduleConflict_Threshold_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Conflict Status Threshold.
Values possible: 0, 1, 2, 3
0: no conflict control is done</description>
        <label>Call Schedule Conflict Threshold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Camera_Roll_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines if user has access to the Camera Roll.
    0 - Camera Roll is on
    1 - Camera Roll is off</description>
        <label>Camera Roll</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Sync_Timeout_vod__c</fullName>
        <defaultValue>3600</defaultValue>
        <description>Timeout, in number of seconds, for client communication requests.  60 = 1 minute, 3600 = 1 hour.  Warning: lowering this value may result in sync failures.</description>
        <label>Client Sync Timeout</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Sync_Confirm_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, users will be prompted to choose whether to begin content sync or not.</description>
        <label>MEDIA SYNC CONFIRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Sync_Interval_vod__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days that a user can go without being notified of not syncing of CLM content</description>
        <label>MEDIA SYNC INTERVAL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DATA_CHANGE_REQUEST_MODE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines if a user can create Data Change Requests. See documentation for more details.</description>
        <label>Data Change Request Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCR_ALERT_MSG_NUM_DAYS_vod__c</fullName>
        <defaultValue>7</defaultValue>
        <description>The number of days DCR update notifications will be displayed in the Alert widget on iRep.</description>
        <label>DCR Alert Message Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>